# rust-backend

./: .env  Cargo.toml  README.md
migrations/2024-02-01-120725_create_tables/: down.sql  up.sql
src/: error_handler.rs  main.rs
src/db/: connection.rs  mod.rs  schema.rs
src/db/domain/: mod.rs  person.rs  wallet.rs
src/routes/: routes.rs
