[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-rt = "1.0"
tokio = { version = "1", features = ["full"] }
serde = "1.0.196"
serde_json = "1.0.113"
serde_derive = "1.0.196"
chrono = { version = "0.4.33", features = ["serde"]}
diesel = { version = "2.1.0", features = ["postgres", "chrono", "numeric", "r2d2"] }
dotenvy = "0.15"
lazy_static = "1.4.0"
listenfd = "0.3"
r2d2 = "0.8.10"
derive_more = "0.99.0"